File Name: CHANGES

09/12/2012 FASP 1.0.9:
- Fix warnings from VS2008.
- Upadet ICC compiler in VS2008.
- Compare classical AMG implementation with an older version and make a few changes.
- Locate the difference between the old AMG and new one: CF-ordering is used as default.

09/11/2012 FASP 1.0.8:
- Merge two branches.
- Fix a bug in BiCGstab output.
- Fix a bug in OpenMP related to "critical" in transpose operation.
- Set -Wall as default, saved in make.inc.default.
- Fix all gcc warnings, except schwarz.f --need to be replaced later.

09/04/2012 FASP 1.0.7:
- Change some filenames to keep naming consistent.
- Some more OMP changes, make changes to fasp4monix accordingly.
- Several OMP optimization changes.
- Change default parameters: coarse_scaling is not safe.
- Modify make.inc and prepare it for debug environment.

08/25/2012 FASP 1.0.6:
- Replace "#if FASP_USE_OPENMP" by the system environment variable "_OPENMP".
- Some changes to OMP functions for sparse matrix operations.
- Some changes for fasp4monix/SPE10.
- Fix a typo in README for building FASP.
- Change filename: amg_setup_aggregation.inl -> amg_setup_aggregation_csr.inl.
- Revert test.c and input.ini to their orginal state.
- Fix a strange HG version problem.
- Upgrade Doxygen to 1.8.2.

08/22/2012 FASP 1.0.5:
- Replace "if (FASP_USE_OPENMP)" by preprocessing "#if".

08/02/2012 FASP 1.0.4:
- Update block Jacobi in OMP.
- Fix function name bugs in io.c.

07/12/2012 FASP 1.0.3:
- Update a few OMP routines.
- Prepare testing OMP version on Windows.
- Modify the TODO list.

07/05/2012 FASP 1.0.2:
- Modify the interface of Schwarz to make it consistent with AMG and ILU.
- Update a few OMP routines. 
- Fix a VC++ compability problem in fort_ns.h.
- Fix a data type bug and other possible problems according to VC++ warnings.
- Remove user-defined make.inc files.

06/27/2012 FASP 1.0.1:
- Fix a few GCC warnings and Doxygen warnings.
- Update documentation.
- Update a few OMP routines.
